Release v2.3.0 accountable Book Keeper
